# blog-project

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  env.example
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml
blog-client/src/: client.rs  error.rs  lib.rs  model.rs
blog-client/src/transport/: grpc.rs  http.rs
blog-client/tests/: grpc_client_flow.rs  http_client_flow.rs
blog-grpc/: Cargo.toml  build.rs
blog-grpc/proto/: blog.proto
blog-grpc/src/: lib.rs
blog-server/: Cargo.toml  README.md  auth_requests.http  build.rs  test_auth.sh
blog-server/migrations/: 20260407000001_create_users.sql  20260407000002_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: app.rs  dto.rs  handlers.rs  lib.rs  main.rs
blog-server/src/application/: auth_service.rs  mod.rs  post_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/infrasturcture/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs  security.rs
blog-server/src/presentation/: auth_http_handlers.rs  middleware.rs  mod.rs  posts_http_handlers.rs
blog-server/src/presentation/grpc/: auth_service.rs  mappers.rs  middleware.rs  mod.rs  post_editor_service.rs  post_service.rs  proto.rs
blog-server/src/presentation/rest/: auth_http_handlers.rs  middleware.rs  mod.rs  posts_http_handlers.rs
blog-server/tests/: auth_requests.http  cleanup_db.sql  grpc_blog_flow.rs  grpc_config.json  grpc_requests.http  rest_blog_flow.rs  rest_requests.http
blog-wasm/: Cargo.toml  index.html
blog-wasm/src/: lib.rs
