[workspace]
resolver = "3"
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"]}
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "chrono",
] }
serde = { version = "1", features = ["derive"] }