[workspace]
resolver = "3"
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"]}
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "chrono",
    "time"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
prost-types = "0.14"