[workspace]
resolver = "3"
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm"
, "blog-grpc"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "chrono",
    "time"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
prost-types = "0.14"
async-trait = "0.1"
url = "2.5"
reqwest = { version = "0.13", features = ["json"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
