[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
tonic = "0.14.5"
prost-types = "0.14"
blog-grpc = { path = "../blog-grpc" }
url = "2.5.8"
reqwest = { version = "0.13.2", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
blog-server = { path = "../blog-server" }