[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost-types.workspace = true
blog-grpc = { path = "../blog-grpc" }
url.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-util.workspace = true
tonic = { workspace = true, features = ["transport"] }
testcontainers.workspace = true
testcontainers-modules.workspace = true
blog-server = { path = "../blog-server" }
