[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
anyhow = "1.0.102"
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
actix-cors = "0.7"
tokio-util = "0.7.18"
futures-util = "0.3.32"

[build-dependencies]
tonic-prost-build.workspace = true
