[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tonic.workspace = true
prost-types.workspace = true
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
actix-cors = "0.7"
tokio-util = "0.7.18"
futures-util = "0.3.32"
clap = { version = "4.6.0", features = ["derive"] }
blog-grpc = { path = "../blog-grpc" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7"
tonic = { version = "0.14", features = ["transport"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
