[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tonic.workspace = true
prost-types.workspace = true
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
dotenvy = "0.15"
argon2 = "0.5"
jsonwebtoken = "9"
actix-cors = "0.7"
tokio-util.workspace = true
futures-util = "0.3.32"
clap.workspace = true
blog-grpc = { path = "../blog-grpc" }

[dev-dependencies]
tokio.workspace = true
tokio-util.workspace = true
tonic = { workspace = true, features = ["transport"] }
testcontainers.workspace = true
testcontainers-modules.workspace = true
reqwest.workspace = true
serde_json.workspace = true
