[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlFormElement",
    "HtmlDivElement",
    "Node",
    "NodeList",
    "Event",
    "EventTarget",
    "MouseEvent",
    "SubmitEvent",
    "Location",
    "Storage",
    "console",
    "CssStyleDeclaration",
    "DomTokenList",
]
